<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_margin="2dp">

    <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProfileButton"
            android:text="@string/edit_button_text"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_light"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <LinearLayout
                android:id="@+id/LinearLayoutProfile"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/name_label"
                    android:padding="@dimen/profile_padding"
                    android:id="@+id/textView"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name_textbox_hint"
                    android:ems="10"
                    android:padding="@dimen/profile_padding"
                    android:id="@+id/editName"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/surname_label"
                    android:padding="@dimen/profile_padding"
                    android:id="@+id/textView2"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/surname_textbox_hint"
                    android:padding="@dimen/profile_padding"
                    android:ems="10"
                    android:id="@+id/editSurname"
                    android:layout_gravity="center_horizontal"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/email_label"
                    android:padding="@dimen/profile_padding"
                    android:id="@+id/textView3"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/email_textbox_hint"
                    android:padding="@dimen/profile_padding"
                    android:id="@+id/editEmail"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/phone_label"
                    android:padding="@dimen/profile_padding"
                    android:id="@+id/textView4"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:hint="@string/phone_textbox_hint"
                    android:padding="@dimen/profile_padding"
                    android:id="@+id/editPhone"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/info_label"
                    android:padding="@dimen/profile_padding"
                    android:id="@+id/textView5"/>

            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/info_textbox_hint"
                    android:padding="@dimen/profile_padding"
                    android:id="@+id/editInfo"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_light"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/okCancelButtonsLayout">

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancelProfileButton"
                    android:layout_weight="1"
                    android:text="@string/cancel_button"/>

            <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_light"/>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/okProfileButton"
                    android:layout_weight="1"
                    android:text="@string/ok_button"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
