<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

    <ListView
            android:id="@+id/listViewDiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dp"

            android:choiceMode="singleChoice"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_light"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDeleteDiary"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:text="@string/delete_button_text"/>

        <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_light"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEditDiary"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:text="@string/edit_button_text"/>

        <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_light"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAddDiary"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:text="@string/add_button_text"/>
    </LinearLayout>

</LinearLayout>